Closed
Bug 184518
Opened 23 years ago
Closed 23 years ago
Typeaheadfind repeated character mode not working when it requires >2 chars to start
Categories
(SeaMonkey :: Find In Page, defect)
SeaMonkey
Find In Page
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: aaronlev, Assigned: aaronlev)
References
Details
Attachments
(1 file, 1 obsolete file)
2.71 KB,
patch
|
caillon
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
When you type the same character several times, typeaheadfind is supposed to
eventually search only for links that start with that character.
This no longer works, not sure when it regressed.
Assignee | ||
Comment 1•23 years ago
|
||
Assignee | ||
Updated•23 years ago
|
Attachment #108777 -
Flags: superreview?(jst)
Attachment #108777 -
Flags: review?(caillon)
Comment 2•23 years ago
|
||
really? this WFM using today's trunk (commercial, 2002120908) build on linux rh8
and win2k. unless this is a debug-only issue.
tested on http://mozilla.org by hitting the letter 'm' repeatedly: taf found
links beginning with the letter 'm'.
Assignee | ||
Updated•23 years ago
|
Attachment #108777 -
Attachment is obsolete: true
Assignee | ||
Comment 3•23 years ago
|
||
Sarah, try "dd" and then "ddd" in www.mozilla.org. That's the case that's not
working.
Will submit patch soon.
Summary: Typeaheadfind repeated character mode no longer working → Typeaheadfind repeated character mode not working when it requires >2 chars to start
Comment 4•23 years ago
|
||
ah, i see what you mean --thanks for the clarification!
Comment 5•23 years ago
|
||
Comment on attachment 108777 [details] [diff] [review]
Make sure repeated character find code gets called, mode gets set on success
sr=jst
Attachment #108777 -
Flags: superreview?(jst) → superreview+
Assignee | ||
Updated•23 years ago
|
Attachment #108777 -
Flags: review?(caillon)
Assignee | ||
Comment 6•23 years ago
|
||
Assignee | ||
Updated•23 years ago
|
Attachment #108815 -
Flags: superreview?(alecf)
Attachment #108815 -
Flags: review?(caillon)
Comment 7•23 years ago
|
||
Comment on attachment 108815 [details] [diff] [review]
Better patch, after getting feedback from Sairuh about exact bug.
I wonder if it would be a good idea to move typeahead away from the many
PRPackedBools for everything and maybe just use a PRUint16 (32?) bitmask of
mFlags or something for the various things going on. Nonetheless, that's not
in the scope of this bug, but would be something to consider maybe. r=caillon
for this patch.
Also, alecf is on vacation for a while IIRC, so you may want to find a
different sr.
Attachment #108815 -
Flags: review?(caillon) → review+
Assignee | ||
Comment 8•23 years ago
|
||
Comment on attachment 108815 [details] [diff] [review]
Better patch, after getting feedback from Sairuh about exact bug.
Johnny, sorry for the bogus original sr= request. This one's for real.
Apparently marking a patch obsolete doesn't kill the review requests.
Attachment #108815 -
Flags: superreview?(alecf) → superreview?(jst)
Comment 9•23 years ago
|
||
Comment on attachment 108815 [details] [diff] [review]
Better patch, after getting feedback from Sairuh about exact bug.
sr=jst
Attachment #108815 -
Flags: superreview?(jst) → superreview+
Assignee | ||
Comment 11•23 years ago
|
||
checked this in last week
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 12•23 years ago
|
||
vrfy'd fixed using 2003.01.08 trunk bits on win2k, mac os x 10.2.3 and linus rh8.
Status: RESOLVED → VERIFIED
Updated•17 years ago
|
Product: Core → SeaMonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•