Bug 184518. Repeated char find when >2 chars required to start it. r=caillon, sr=jst